--- a/src/app/shared/components/hover-canvas/hover-canvas.component.html
+++ b/src/app/shared/components/hover-canvas/hover-canvas.component.html
@@ -5,7 +5,7 @@
   <div class="p-relative c-hand">
 
     <img class="img-fit-cover img-responsive" src="../../../../assets/img/placeholder.jpg" alt="">
-    <div class="hint-text p-absolute text-center">
+    <div class="hint-text p-absolute text-center space-top">
       <h3>
         <b>
           Click or drag images over this canvas
